--- a/playbook.yml
+++ b/playbook.yml
@@ -13,9 +13,23 @@
       - psycopg2-binary
       - pymysql
   tasks:
+   - name: Ensure apt-transport-https is installed
+     apt:
+      name: apt-transport-https
+
+   - name: Add Yarn apt key
+     apt_key:
+      url: https://dl.yarnpkg.com/debian/pubkey.gpg
+
+   - name: Add Yarn repository
+     apt_repository:
+      repo: "deb https://dl.yarnpkg.com/debian/ stable main"
+      filename: yarn
+
    - name: Packages and Libraries
      ansible.builtin.apt:
       name:
+        - yarn
         - acl
         - ruby
         - ruby-dev
